--- a/src/partials/_widget.scss
+++ b/src/partials/_widget.scss
@@ -138,7 +138,7 @@
     .widget__info {
         cursor: url("../dist/img/cursor.svg"), auto;
         &:focus {
-            outline: 2px dashed $color-wcag-invert;
+            outline: 2px dashed $color-wcag;
         }
     }
 
