--- a/src/utils/_print.scss
+++ b/src/utils/_print.scss
@@ -31,6 +31,7 @@
         }
 
         ul {
+            display: none;
             img {
                 width: 25pt;
                 opacity: 1;
